@@ -38,8 +38,14 @@
 
 #include_next <sys/cdefs.h>
 
-#define __dead2		__attribute__((__noreturn__))
-#define __unused	__attribute__((__unused__))
+#define	__dead2		__attribute__((__noreturn__))
+#define	__pure2		__attribute__((__const__))
+#define	__unused	__attribute__((__unused__))
+#define	__used		__attribute__((__used__))
+#define	__packed	__attribute__((__packed__))
+#define	__aligned(x)	__attribute__((__aligned__(x)))
+#define	__section(x)	__attribute__((__section__(x)))
+
 #define __offsetof(type, field)	__builtin_offsetof(type, field)
 #define __printflike(fmtarg, firstvararg) \
 	__attribute__((__format__ (__printf__, fmtarg, firstvararg)))
