@@ -1,8 +1,9 @@
 freebsd-buildutils (9.0-5) UNRELEASED; urgency=low
 
   * Add implicit includes to sys/stdint.h.
+  * Steal a few more definitions for sys/cdefs.h.
 
- -- Robert Millan <rmh@debian.org>  Sat, 04 Feb 2012 14:10:02 +0100
+ -- Robert Millan <rmh@debian.org>  Sat, 04 Feb 2012 14:16:21 +0100
 
 freebsd-buildutils (9.0-4) unstable; urgency=low
 
